# SlicerAUAE

./: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  requirements-slicer.txt
.github/workflows/: ci.yml
AUAE/: AUAE.py  CMakeLists.txt
AUAE/AUAELib/: AirwayExtension.py  BatchProcessor.py  CudaSupport.py  Dependencies.py  IconPath.py  PythonDependencyChecker.py  SegmentationWidget.py  Utils.py  __init__.py
AUAE/CLI/: auae_batch.py
AUAE/Resources/: batch_template.json
AUAE/Testing/: AirwayExtensionTestCase.py
docs/: DOCUMENTATION.md
